# agentsquared

./: README.md  exerbot.py  newstuff.py  pyproject.toml  requiret.txt
src/agent2/: __init__.py  __main__.py  main.py  newstuff.txt
src/hackathonmarimo/: __init__.py  main.py
