[project]
name = "agent2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Benjamin Sobel", email = "ben-developer@opayq.com" }
]
dependencies = [
    "marimo>=0.11.8",
    "typer>=0.15.1",
    "openai>=1.63.2",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[project.scripts]
sobelgen = "agent2:mainx"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agent2"]
